[package]
name = "nym-vpnc"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
parity-tokio-ipc.workspace = true
prost.workspace = true
tokio.workspace = true
tonic.workspace = true
tower = "0.4.13"

[build-dependencies]
tonic-build.workspace = true
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }
