[package]
name = "nym-vpnc"
version = "0.1.2"
description = "Nym VPN console client"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bs58.workspace = true
clap = { workspace = true, features = ["derive"] }
parity-tokio-ipc.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}
tonic.workspace = true
tower.workspace = true

nym-gateway-directory = { path = "../crates/nym-gateway-directory" }
nym-vpn-proto = { path = "../crates/nym-vpn-proto" }

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

# Debian
[package.metadata.deb]
name = "nym-vpnc"
maintainer-scripts = "debian"
systemd-units = { enable = false }
