[package]
name = "nym-vpnd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"


[dependencies]
clap.workspace = true
futures.workspace = true
parity-tokio-ipc.workspace = true
prost.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["full"]}
tonic.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

nym-vpn-lib = { path = "../nym-vpn-lib" }
nym-task.workspace = true

[build-dependencies]
tonic-build.workspace = true
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }
