[package]
name = "nym-vpnd"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"


[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
parity-tokio-ipc.workspace = true
prost.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"]}
toml.workspace = true
tonic.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true

nym-vpn-lib = { path = "../nym-vpn-lib" }
nym-vpn-proto = { path = "../crates/nym-vpn-proto" }
nym-task.workspace = true

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }
