[package]
name = "nym-vpnd"
version = "0.1.3-dev"
description = "Nym VPN daemon"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
parity-tokio-ipc.workspace = true
prost.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"]}
toml.workspace = true
tonic.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true

# match the version required by tonic
http = "0.2.12"

nym-vpn-lib = { path = "../nym-vpn-lib" }
nym-vpn-proto = { path = "../crates/nym-vpn-proto" }
nym-task.workspace = true

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

# Debian
[package.metadata.deb]
name = "nym-vpnd"
maintainer-scripts = "debian"

[package.metadata.deb.systemd-units]
unit-name = "nym-vpnd"
enable = true
start = true
restart-after-upgrade = false
stop-on-upgrade = true
unit-scripts = "linux/unit-scripts"
