[package]
name = "nym-connection-monitor"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
futures.workspace = true
nym-task.workspace = true
nym-sdk.workspace = true
