[package]
name = "nym-gateway-directory"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
hickory-resolver.workspace = true
itertools.workspace = true
log.workspace = true
nym-client-core.workspace = true
nym-explorer-client.workspace = true
nym-sdk.workspace = true
nym-topology.workspace = true
nym-validator-client.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
chrono = "0.4.37"
