[package]
name = "nym-vpn-proto"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
