[package]
name = "nym-vpn-proto"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost-types.workspace = true
prost.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
