[package]
name = "nym-vpn-cli"
version = "0.1.7-dev"
edition = "2021"
license = "GPL-3.0-only"
authors = ["Nym Technologies"]

[dependencies]
anyhow.workspace = true
bs58.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
dirs.workspace = true
ipnetwork.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
tracing-subscriber.workspace = true
tracing.workspace = true
time.workspace = true

nym-vpn-lib = { path = "../nym-vpn-lib" }

# Ugly workaround to force a working setup of dependencies. We should get rid
# of this ASAP
shadowsocks = { version = "~1.14.2" }
shadowsocks-service = { version = "~1.14.3" }

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

[features]
metrics-server = ["nym-vpn-lib/metrics-server"]

# Debian
[package.metadata.deb]
name = "nym-vpn-cli"
maintainer-scripts = "debian"
systemd-units = { enable = false }
