[package]
name = "nym-vpn-cli"
version = "0.1.11-dev"
description = "Standalone NymVPN commandline client"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bs58.workspace = true
clap = { workspace = true, features = ["cargo", "derive"] }
dirs.workspace = true
ipnetwork.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["process", "rt-multi-thread", "fs", "sync"] }
tracing-subscriber.workspace = true
tracing.workspace = true
time.workspace = true

nym-vpn-lib = { path = "../nym-vpn-lib" }

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

[features]
metrics-server = ["nym-vpn-lib/metrics-server"]

# Debian
[package.metadata.deb]
name = "nym-vpn-cli"
extended-description = '''NymVPN is a vpn service that uses the Nym mixnet.

This package contains the nym-vpn-cli binary, that connects in the terminal and runs in the foreground

It's primarily used for testing and not aimed and end-users'''
maintainer-scripts = "debian"
systemd-units = { enable = false }
