[package]
name = "nym-vpnd"
version = "0.1.10-dev"
description = "Nym VPN daemon"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum-server = { workspace = true, features = ["tls-rustls"] }
axum.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
http.workspace = true
log.workspace = true
maplit.workspace = true
parity-tokio-ipc.workspace = true
prost-types.workspace = true
prost.workspace = true
reqwest = { workspace = true, default-features = false, features = ["rustls-tls"] }
serde.workspace = true
thiserror.workspace = true
time.workspace = true
tokio = { workspace = true, features = ["full"]}
tokio-stream.workspace = true
toml.workspace = true
tonic-health.workspace = true
tonic-reflection.workspace = true
tonic.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
tracing-appender = "0.2.3"

nym-vpn-lib = { path = "../nym-vpn-lib" }
nym-vpn-proto = { path = "../crates/nym-vpn-proto" }
nym-task.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7.0"
eventlog = "0.2.2"
winapi = { version = "0.3", features = ["winnt", "excpt"] }

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.45.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
]

[build-dependencies]
vergen = { workspace = true, default-features = false, features = [
    "build",
    "git",
    "gitcl",
    "rustc",
    "cargo",
] }

# Debian
[package.metadata.deb]
name = "nym-vpnd"
maintainer-scripts = "debian"

[package.metadata.deb.systemd-units]
unit-name = "nym-vpnd"
enable = true
start = true
restart-after-upgrade = false
stop-on-upgrade = true
unit-scripts = "linux/unit-scripts"
