[package]
name = "nym-vpn-desktop"
version = "0.0.4"
description = "Nym VPN Desktop Client"
authors = ["pierre <dommerc.pierre@gmail.com>", "zane <zanecschepke@gmail.com>", "nym"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "process-all", "shell-open"] }
tokio = { version = "1.33", features = ["rt", "sync", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber =  { version = "0.3.1", features = ["tracing-log", "env-filter"] }
anyhow = "1.0"
dotenvy = "0.15.7"
thiserror = "1.0"
ts-rs = { version = "7.0.0", features = ["chrono-impl"] }
once_cell = "1.18.0"
toml = "0.8.5"
time = "0.3.9"
# TODO use the crate once it's published, for now use local path
nym-vpn-lib = { path = "../../nym-vpn-lib" }
futures = "0.3.15"
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.12"

# TODO Ugly workaround to force a working setup for nym-vpn-lib
# We should get rid of this ASAP
shadowsocks = { version = "~1.14.2" }
shadowsocks-service = { version = "~1.14.3" }
nym-explorer-api-requests = { git = "https://github.com/nymtech/nym", rev = "cec05a99f4e71d6c719b2dd16f61a9d6085d658f" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
