[package]
name = "nym-vpn-desktop"
version = "0.0.13"
description = "Nym VPN Desktop Client"
authors = ["pierre <dommerc.pierre@gmail.com>", "zane <zanecschepke@gmail.com>", "nym"]
license = "GPL-3.0-only"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
build-info-build = "0.0.34"

[dependencies]
tauri = { version = "1.6.0", features = [ "updater", "process-all", "shell-open"] }
tokio = { version = "1.33", features = ["rt", "sync", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber =  { version = "0.3.1", features = ["tracing-log", "env-filter"] }
anyhow = "1.0"
dotenvy = "0.15.7"
thiserror = "1.0"
ts-rs = { version = "7.0.0", features = ["chrono-impl"] }
once_cell = "1.18.0"
toml = "0.8.5"
time = "0.3.9"
# TODO use the crate once it's published, for now use local path
nym-vpn-lib = { path = "../../nym-vpn-lib" }
futures = "0.3.15"
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.12"
clap = { version = "4.5", features = ["derive"] }
build-info = "0.0.34"
sled = "0.34.7"
strum = { version = "0.26", features = ["derive"] }

# TODO Ugly workaround to force a working setup for nym-vpn-lib
# We should get rid of this ASAP
shadowsocks = { version = "~1.14.2" }
shadowsocks-service = { version = "~1.14.3" }

# TODO keep the rev in sync with the one used in nym-vpn-lib
nym-explorer-api-requests = { git = "https://github.com/nymtech/nym", rev = "fa1e9988b37d4c17c7175a9eb817652dff66ac5d" }
nym-api-requests = { git = "https://github.com/nymtech/nym", rev = "fa1e9988b37d4c17c7175a9eb817652dff66ac5d" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
