[package]
name = "nym-vpn-x"
version = "0.1.7-dev"
description = "NymVPN desktop client"
authors = ["Nym Technologies SA", "Pierre <dommerc.pierre@gmail.com>", "Zane <zanecschepke@gmail.com>"]
license = "GPL-3.0-only"
documentation = "https://nymtech.net"
repository = "https://github.com/nymtech/nym-vpn-client"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
build-info-build = "0.0.37"

[dependencies]
tauri = { version = "1.7.1", features = [ "system-tray", "window-set-size", "os-all", "process-all", "shell-open"] }
tokio = { version = "1.33", features = ["rt", "sync", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber =  { version = "0.3.1", features = ["tracing-log", "env-filter"] }
anyhow = "1.0"
dotenvy = "0.15.7"
thiserror = "1.0"
ts-rs = { version = "9.0", features = ["chrono-impl"] }
once_cell = "1.18.0"
toml = "0.8.5"
time = "0.3.9"
itertools = "0.13"
clap = { version = "4.5", features = ["derive"] }
build-info = "0.0.37"
sled = "0.34.7"
strum = { version = "0.26", features = ["derive"] }
tonic =  { version = "0.11", features = ["channel"] }
bs58 = "0.5.1"
parity-tokio-ipc = "0.9.0"
tower = "0.4.8"
reqwest = { version = "0.12", features = ["json"] }
rust_iso3166 = "0.1"

# nym deps
nym-vpn-proto = { path = "../../nym-vpn-core/crates/nym-vpn-proto" }
nym-gateway-directory = { path = "../../nym-vpn-core/crates/nym-gateway-directory/" }
nym-config = { git = "https://github.com/nymtech/nym", rev = "38a2d94f80bbcb3dd0056214f049a96213470773" }
nym-bin-common = { git = "https://github.com/nymtech/nym", rev = "38a2d94f80bbcb3dd0056214f049a96213470773" }

[target."cfg(windows)".dependencies]
windows = { version = "0.57.0", features = ["Win32_System_Console", "Win32_Foundation"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
