[package]
name = "nym-bandwidth-controller"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = { version = "2.0.0", features = ["zeroize"] }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
zeroize = { workspace = true }

nym-credential-storage = { path = "../credential-storage" }
nym-credentials = { path = "../credentials" }
