[package]
name = "nym-apple-dispatch"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2-foundation = { version = "0.2" }
objc2 = { version = "0.5" }
