[package]
name = "nym-apple-network"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2-foundation = { version = "0.2", features = ["NSString"] }
block2 = { version = "0.5" }
objc2 = { version = "0.5", features = ["unstable-apple-new"] }
nix = { workspace = true, features = ["socket", "net"] }

nym-apple-dispatch = { path = "../nym-apple-dispatch" }
