[package]
name = "nym-apple-network"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2-foundation = { workspace = true, features = ["NSString"] }
block2.workspace = true
objc2.workspace = true
nix = { workspace = true, features = ["socket", "net"] }
thiserror.workspace = true

nym-apple-dispatch = { path = "../nym-apple-dispatch" }
