[package]
name = "nym-authenticator-client"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nym-authenticator-requests.workspace = true
nym-sdk.workspace = true
nym-wireguard-types.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
