[package]
name = "nym-authenticator-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nym-authenticator-requests.workspace = true
nym-sdk.workspace = true
nym-wireguard-types.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
