[package]
name = "nym-coconut-fork"
version = "0.5.0"
authors = ["Jedrzej Stuczynski <andrew@nymtech.net>", "Ania Piotrowska <ania@nymtech.net>"]
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc", "experimental", "zeroize"] }
itertools = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_derive = { version = "1.0" }
bs58 = { workspace = true }
sha2 = "0.9"
zeroize = { workspace = true, optional = true }

[dependencies.group]
version = "0.13.0"
default-features = false

[features]
key-zeroize = ["zeroize", "bls12_381/zeroize"]
default = []
