[package]
name = "nym-common"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc.workspace = true
thiserror.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
]
