[package]
name = "nym-connection-monitor"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
nym-ip-packet-requests.workspace = true
nym-sdk.workspace = true
nym-task.workspace = true
pnet_packet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
