[package]
name = "nym-credentials-fork"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bls12_381 = { git = "https://github.com/jstuczyn/bls12_381", default-features = false,  branch = "feature/gt-serialization-0.8.0", features = ["pairings", "alloc", "experimental", "zeroize"] }
bincode = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
time = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
zeroize = { workspace = true }

nym-credentials-interface-fork = { path = "../nym-credentials-interface-fork" }
nym-crypto = { workspace = true, features = ["rand", "asymmetric", "serde"] }
nym-validator-client = { workspace = true }

