[package]
name = "nym-dbus"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
version = "1.2.0-dev"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
